Fix spacing with the top container in the Contact component

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -2,5 +2,9 @@
   width: 100%;
   height: 100vh;
   padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 30px;
 }
 
